# silikego

./: Build.md  Build.txt  CMakeLists.txt  License.txt  Readme.md
cli/: CMakeLists.txt  Main.cc  Main.cpp  StringSource.cpp  StringSource.hpp
cocoa/: CMakeLists.txt  Delegate.h  Delegate.hh  Delegate.mm  Main.mm  MainMenu.xib  silikego.icns
command/: CMakeLists.txt  Main.cc  StringSource.cc  StringSource.h  StringSource.hh  rl.cc
cpack/: WixLicense.txt
gtkmm2/: CMakeLists.txt  EvalWindow.cc  EvalWindow.hh
gtkmm3/: CMakeLists.txt  EvalWindow.cc  EvalWindow.glade  EvalWindow.h  Main.cc  gresource.xml  silikego.desktop  silikego.gresource.xml
gtkmm4/: EvalWindow.cc  EvalWindow.h  EvalWindow.ui  Main.cc  silikegujo.desktop
gui-osx/: CMakeLists.txt  Delegate.mm
gui-unix/: CMakeLists.txt  EvalWindow.cpp  EvalWindow.hpp  Main.cpp
gui-windows/: About.cpp  About.hpp  App.cpp  CMakeLists.txt  EvalWindow.cc  EvalWindow.cpp  EvalWindow.hpp
lib/: CMakeLists.txt  CStringSource.cc  CStringSource.cpp  CStringSource.h  CStringSource.hh  CStringSource.hpp  DataSource.cc  DataSource.h  DataSource.hh  DataSource.hpp  FunctionCaller.cc  FunctionCaller.cpp  FunctionCaller.h  FunctionCaller.hh  FunctionCaller.hpp  Functions.cc  Functions.cpp  Functions.h  Functions.hh  Functions.hpp  InfixParser.cc  InfixParser.cpp  InfixParser.h  InfixParser.hh  InfixParser.hpp  Lexer.cc  Lexer.cpp  Lexer.h  Lexer.hh  Lexer.hpp  Silikego.pc.in  SilikegoConfig.cmake  StringSource.cc  StringSource.h  SyntaxTree.cc  SyntaxTree.cpp  SyntaxTree.h  SyntaxTree.hh  SyntaxTree.hpp  Token.cc  (+12 more)
lib/include/Silikego/: DataSource.h  FunctionCaller.h  InfixParser.h  Lexer.h  StringSource.h  SyntaxTree.h  Token.h  Value.h  W32Dll.h
lib/src/: DataSource.cc  FunctionCaller.cc  Functions.cc  Functions.h  InfixParser.cc  StringSource.cc  Token.cc
mfc/: About.cc  About.h  About.hh  About.rc  App.cc  CMakeLists.txt  EvalWindow.cc  EvalWindow.h  EvalWindow.hh  EvalWindow.rc  Id.h
packaging/: CMakeLists.txt
silikegilo/: CMakeLists.txt  StringSource.cc  StringSource.h  Version.rc.in  rl.cc
silikego/: CMakeLists.txt  SilikegoConfig.cmake
silikego/include-ide/Silikego/: Api.h
silikego/include/Silikego/: FunctionCaller.h  InfixParser.h  StringSource.h  SyntaxTree.h  Token.h
silikego/src/: InfixParser.cc  Lexer.cc  SyntaxTree.cc  Value.cc  Version.rc.in
silikegujo-macos/: CMakeLists.txt
silikegujo-unix/: CMakeLists.txt  EvalWindow.cc  gresource.xml
silikegujo-windows/: CMakeLists.txt  EvalWindow.cc  Icon.rc
tests/: CMakeLists.txt  TestFunctions.cc  TestFunctions.cpp  TestLexer.cc  TestLexer.cpp  TestLinkage.cc  TestLinkage.cpp
win32/: About.rc  CMakeLists.txt  EvalWindow.cc  Icon.rc  WinMain.cc
